--- a/LojaPlatinaMVC/Views/Categoria/Index.cshtml
+++ b/LojaPlatinaMVC/Views/Categoria/Index.cshtml
@@ -3,12 +3,23 @@
     ViewData["Title"] = "Index";
 }
 
+<div class="container p-4">
+    <div class="row p-3">
+        <div class="col-6">
+            <h2 class="text-black">Categorias</h2>
+        </div>
+        <div class="col-6 text-black">
+            <i class="bi bi-plus-circle"></i><a class="btn-dark" asp-action="Criar" asp-controller="Categoria">Criar Nova Categoria</a>
+        </div>
+    </div>
+</div>
+
 <h1>Lista de Categorias</h1>
 <table class="table table-bordered table-striped" style="width:100%">
     <thead>
         <tr>    
             <th>
-                Name Categorias
+                Categorias
             </th>
 
             <th>
