--- a/LojaPlatinaMVC/Views/Categoria/Index.cshtml
+++ b/LojaPlatinaMVC/Views/Categoria/Index.cshtml
@@ -9,7 +9,7 @@
             <h2 class="text-black">Categorias</h2>
         </div>
         <div class="col-6 text-black">
-            <i class="bi bi-plus-circle"></i><a class="btn-dark" asp-action="Criar" asp-controller="Categoria">Criar Nova Categoria</a>
+            <a class="btn btn-dark" asp-action="Criar" asp-controller="Categoria"><i class="bi bi-plus-circle"></i>&nbsp;Criar Nova Categoria</a>
         </div>
     </div>
 </div>
