--- a/LojaPlatinaMVC/Views/Categoria/Edit.cshtml
+++ b/LojaPlatinaMVC/Views/Categoria/Edit.cshtml
@@ -3,7 +3,7 @@
 <form method="post">
 	<div class="border p-3 mt-4">
 		<div class="row pb-3">
-			<h2 class="text-black">Categoria</h2>
+			<h2 class="text-black">Atualizar Categoria</h2>
 			<hr/>
 		</div>
 		<div asp-validation-summary=All></div>
@@ -18,7 +18,7 @@
 			<input asp-for="MostrarPedido" class="form-control"/>
 			<span asp-validation-for="MostrarPedido" class="text-danger"></span>
 		</div>
-		<button class="btn btn-primary" type="submit">Criar</button>
+		<button class="btn btn-primary" type="submit">Atualizar</button>
 	</div>
 	<a asp-action="Index" asp-controller="categoria">Voltar</a>
 
