--- a/LojaPlatinaMVC/Views/Categoria/Index.cshtml
+++ b/LojaPlatinaMVC/Views/Categoria/Index.cshtml
@@ -26,7 +26,7 @@
                 Mostrar Pedido
             </th>
             <th>
-                Acao
+                Editar
             </th>
         </tr>
     </thead>
@@ -43,7 +43,8 @@
                 @item.MostrarPedido
             </th>
             <td role="group">
-                <a asp-action="Edit" asp-controller="categoria" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
+                <a class="btn-outline-dark" asp-action="Edit" asp-controller="categoria" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
+                <a class="btn-outline-dark" asp-action="Delete" asp-controller="categoria" asp-route-id="@item.Id"><i class="bi bi-trash"></i></a>
             </td>
         </tr>
         }
