--- a/LojaPlatinaMVC/Views/Categoria/Delete.cshtml
+++ b/LojaPlatinaMVC/Views/Categoria/Delete.cshtml
@@ -21,7 +21,7 @@
 		</div>
 		<button class="btn btn-dark" type="submit">Delete</button>
 	</div>
-	<a asp-action="Index" asp-controller="categoria">Voltar</a>
+	<a class="btn-outline-dark" asp-action="Index" asp-controller="categoria">Voltar</a>
 
 </form>
 
