--- a/LojaPlatinaMVC/Views/Shared/_Layout.cshtml
+++ b/LojaPlatinaMVC/Views/Shared/_Layout.cshtml
@@ -6,12 +6,12 @@
     <title>@ViewData["Title"] - LojaPlatinaMVC</title>  
     <link rel="stylesheet" href="~/css/A_BootswatchTheme.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="~/LojaPlatinaMVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
-        
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
@@ -74,6 +74,8 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_Notificacao"/>
+
             @RenderBody()
         </main>
     </div>
